--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               </nav>
             </div>
     <div class="container-fluid banner  m-0 p-0">
-      <div class="row m-0 ">
+      <div class="row m-0 w-100">
           <div class="col-md-7 m-0 p-0">
             <img class="img-fluid" src="/img/boat.jpg" alt=""> 
           </div>
